# Paddle

./: CMakeLists.txt  _typos.toml  setup.py
paddle/fluid/: CMakeLists.txt
paddle/fluid/eager/auto_code_generator/generator/: codegen_utils.py
paddle/fluid/framework/: executor_cache.cc  operator.cc
paddle/fluid/framework/ir/: elementwiseadd_transpose_pass.cc  fuse_multi_transformer_layer_pass.cc  fused_feedforward_pass.cc  layernorm_shift_partition_fuse_pass.cc
paddle/fluid/framework/new_executor/: standalone_executor.cc
paddle/fluid/framework/new_executor/interpreter/: dependency_builder.cc  dependency_builder.h
paddle/fluid/imperative/: reducer.cc
paddle/fluid/inference/analysis/ir_passes/: subgraph_util.cc
paddle/fluid/inference/api/: paddle_pass_builder.h
paddle/fluid/inference/goapi/: config.go
paddle/fluid/inference/tensorrt/convert/: conv3d_op.cc  dequantize_linear_op.cc  emb_eltwise_layernorm.cc  group_norm_op.cc  preln_emb_eltwise_layernorm.cc  preln_groupnorm_act_op.cc  prompt_tuning_emb_eltwise_layernorm.cc  quantize_linear_op.cc  skip_groupnorm_act_op.cc  sparse_fc_op.cc  square_op.cc
paddle/fluid/inference/tensorrt/plugin/: elementwise_op_plugin.cu  pool3d_op_plugin.cu  pool3d_op_plugin.h  (+2 more)
paddle/fluid/operators/generator/: parse_utils.py
paddle/fluid/pir/drr/: README.md  README_cn.md
paddle/fluid/pir/transforms/: pd_op_to_kernel_pass.cc
paddle/fluid/platform/tensorrt/: engine.h
paddle/fluid/pybind/: CMakeLists.txt  control_flow_api.cc  eager_functions.cc  jit.cc  pybind.cc  python_callable_registry.cc
python/: setup.py.in
(+115 files in other folders)
