add_subdirectory(platform)
if(NOT WIN32)
  add_subdirectory(distributed)
endif()
add_subdirectory(framework)
add_subdirectory(imperative)
add_subdirectory(operators)
add_subdirectory(pybind)
add_subdirectory(eager)
add_subdirectory(prim)
add_subdirectory(jit)
add_subdirectory(pir)
add_subdirectory(ir_adaptor)
add_subdirectory(primitive)
add_subdirectory(sub_graph)
# NOTE: please add subdirectory inference at last.
add_subdirectory(inference)
